--- a/package.json
+++ b/package.json
@@ -9,20 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@mui/x-date-pickers": "^8.9.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "install": "^0.13.0",
     "next": "15.4.6",
+    "npm": "^11.5.2",
     "react": "19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
+    "react-tailwindcss-datepicker": "^2.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
